syntax="proto3";

option go_package = "github.com/ismailozdel/micro/common/proto/user";

package proto;

service UserService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
}

message GetUserRequest {
    string id = 1;
}

message GetUserResponse {
    repeated User user = 1;
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}

message CreateUserResponse {
    repeated User user = 1;
}

message UpdateUserRequest {
    User user = 1;
}

message UpdateUserResponse {
    repeated User user = 1;
}

message DeleteUserRequest {
    string id = 1;
}

message DeleteUserResponse {
    repeated string id = 1;
}




